--- a/Dictionary/Info.plist
+++ b/Dictionary/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Access camera to recognise text</string>
 </dict>
 </plist>
