updated info plist and some cosmetic changes

--- a/Dictionary/Info.plist
+++ b/Dictionary/Info.plist
@@ -36,5 +36,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Access Warning</string>
 </dict>
 </plist>
